website/websites/gp4/code/partialsums-scala.log
BUILD COMMANDS FOR: partialsums.scala

Sat Jan 27 18:27:07 PST 2007

( if [ ! -d partialsums.scala_run ] ; then mkdir partialsums.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/partialsums/partialsums.scala partialsums.scala_run/partialsums.scala
( cd partialsums.scala_run ; /opt/scala-2.3.3/bin/scalac partialsums.scala )
partialsums.scala:19: error: value printf is not a member of object scala.Console
      Console.printf( f + "(2/3)^k\n" )(s1)
             ^
partialsums.scala:20: error: value printf is not a member of object scala.Console
      Console.printf( f + "k^-0.5\n" )(s2)
             ^
partialsums.scala:21: error: value printf is not a member of object scala.Console
      Console.printf( f + "1/k(k+1)\n" )(s3)
             ^
partialsums.scala:22: error: value printf is not a member of object scala.Console
      Console.printf( f + "Flint Hills\n" )(s4)
             ^
partialsums.scala:23: error: value printf is not a member of object scala.Console
      Console.printf( f + "Cookson Hills\n" )(s5)
             ^
partialsums.scala:24: error: value printf is not a member of object scala.Console
      Console.printf( f + "Harmonic\n" )(s6)
             ^
partialsums.scala:25: error: value printf is not a member of object scala.Console
      Console.printf( f + "Riemann Zeta\n" )(s7)
             ^
partialsums.scala:26: error: value printf is not a member of object scala.Console
      Console.printf( f + "Alternating Harmonic\n" )(s8)
             ^
partialsums.scala:27: error: value printf is not a member of object scala.Console
      Console.printf( f + "Gregory\n" )(s9)
             ^
9 errors found
make[3]: [partialsums.scala_run] Error 1 (ignored)
touch partialsums.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.3.3/bin/scala -classpath partialsums.scala_run partialsums %A
************************************************************
*   TEST (partialsums.scala_run) FAILED - ERROR:  partialsums.scala_out differs from Output.25000
************************************************************
-rw-r--r-- 1 dunham users 214 Feb  5  2006 Output.25000
-rw-r--r-- 1 dunham users  26 Jan 27 18:27 partialsums.scala_out


PROGRAM OUTPUT
==============
no such file: partialsums
